[gd_scene load_steps=4 format=3 uid="uid://bfdysmu7nej3t"]

[ext_resource type="Script" uid="uid://2suseseonyui" path="res://ui/blocks/scripts/bottom_loop_block.gd" id="1_oateg"]
[ext_resource type="Texture2D" uid="uid://cueupxa547p8t" path="res://assets/JuaneBtns/Bottom_Loop_Initial.png" id="2_v67xy"]
[ext_resource type="Texture2D" uid="uid://c6rfhyjf3j0aw" path="res://assets/JuaneBtns/Bottom_Loop_Focus.png" id="3_oateg"]

[node name="Bottom_Loop_Block" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 178.0
offset_bottom = 66.0

[node name="Action_Button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(175, 55)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_oateg")

[node name="Initial_Bottom" type="Polygon2D" parent="Action_Button"]
scale = Vector2(1.15, 1.15)
texture = ExtResource("2_v67xy")
polygon = PackedVector2Array(-0.2766238, 4.9405947, 0.70224833, 3.6898146, 1.5723569, 2.65656, 2.6599925, 1.5689249, 3.80201, 0.5900526, 5.215936, 0.15499783, 25.119644, 0.070990615, 27.285177, 0.80270976, 28.585064, 2.2462626, 29.59843, 3.8379426, 30.39427, 5.2863646, 31.298876, 6.7396564, 32.64381, 8.722564, 46.663757, 8.984733, 48.196594, 7.9563494, 49.150707, 6.512798, 49.971306, 5.1682696, 50.549614, 3.4625475, 52.008186, 1.5985508, 53.709034, 0.046235085, 148.099, 0.04622841, 148.91472, 0.48128223, 150.11111, 1.6232996, 151.30753, 2.9828444, 152.06886, 4.288007, 152.77582, 5.430025, 153.04773, 47.354256, 152.34077, 48.876945, 151.57942, 49.529526, 150.43741, 50.562782, 149.73044, 50.834686, 44.595486, 51.81356, 43.29032, 52.46614, 42.692123, 53.825684, 42.148308, 54.967705, 41.223816, 56.762306, 40.299324, 58.013084, 38.8854, 59.970177, 18.604671, 60.133102, 17.6258, 59.154232, 16.4294, 57.52278, 15.015471, 55.51065, 14.526036, 53.8792, 13.384019, 52.6828, 5.0636063, 52.410892, 4.1243095, 52.084602, 3.1454391, 51.37764, 1.7315102, 50.344383, 0.8070221, 49.36551, -0.17185211, 48.44102)
uv = PackedVector2Array(-0.2766238, 4.9405947, 0.70224833, 3.6898146, 1.5723569, 2.65656, 2.6599925, 1.5689249, 3.80201, 0.5900526, 5.215936, 0.15499783, 25.119644, 0.070990615, 27.285177, 0.80270976, 28.585064, 2.2462626, 29.59843, 3.8379426, 30.39427, 5.2863646, 31.298876, 6.7396564, 32.64381, 8.722564, 46.663757, 8.984733, 48.196594, 7.9563494, 49.150707, 6.512798, 49.971306, 5.1682696, 50.549614, 3.4625475, 52.008186, 1.5985508, 53.709034, 0.046235085, 148.099, 0.04622841, 148.91472, 0.48128223, 150.11111, 1.6232996, 151.30753, 2.9828444, 152.06886, 4.288007, 152.77582, 5.430025, 153.04773, 47.354256, 152.34077, 48.876945, 151.57942, 49.529526, 150.43741, 50.562782, 149.73044, 50.834686, 44.595486, 51.81356, 43.29032, 52.46614, 42.692123, 53.825684, 42.148308, 54.967705, 41.223816, 56.762306, 40.299324, 58.013084, 38.8854, 59.970177, 18.604671, 60.133102, 17.6258, 59.154232, 16.4294, 57.52278, 15.015471, 55.51065, 14.526036, 53.8792, 13.384019, 52.6828, 5.0636063, 52.410892, 4.1243095, 52.084602, 3.1454391, 51.37764, 1.7315102, 50.344383, 0.8070221, 49.36551, -0.17185211, 48.44102)

[node name="Focus_Bottom" type="Polygon2D" parent="Action_Button"]
scale = Vector2(1.15, 1.15)
texture = ExtResource("3_oateg")
polygon = PackedVector2Array(-0.2766238, 4.9405947, 0.70224833, 3.6898146, 1.5723569, 2.65656, 2.6599925, 1.5689249, 3.80201, 0.5900526, 5.215936, 0.15499783, 25.119644, 0.070990615, 27.285177, 0.80270976, 28.585064, 2.2462626, 29.59843, 3.8379426, 30.39427, 5.2863646, 31.298876, 6.7396564, 32.64381, 8.722564, 46.663757, 8.984733, 48.196594, 7.9563494, 49.150707, 6.512798, 49.971306, 5.1682696, 50.549614, 3.4625475, 52.008186, 1.5985508, 53.709034, 0.046235085, 148.099, 0.04622841, 148.91472, 0.48128223, 150.11111, 1.6232996, 151.30753, 2.9828444, 152.06886, 4.288007, 152.77582, 5.430025, 153.04773, 47.354256, 152.34077, 48.876945, 151.57942, 49.529526, 150.43741, 50.562782, 149.73044, 50.834686, 44.595486, 51.81356, 43.29032, 52.46614, 42.692123, 53.825684, 42.148308, 54.967705, 41.223816, 56.762306, 40.299324, 58.013084, 38.8854, 59.970177, 18.604671, 60.133102, 17.6258, 59.154232, 16.4294, 57.52278, 15.015471, 55.51065, 14.526036, 53.8792, 13.384019, 52.6828, 5.0636063, 52.410892, 4.1243095, 52.084602, 3.1454391, 51.37764, 1.7315102, 50.344383, 0.8070221, 49.36551, -0.17185211, 48.44102)
uv = PackedVector2Array(-0.2766238, 4.9405947, 0.70224833, 3.6898146, 1.5723569, 2.65656, 2.6599925, 1.5689249, 3.80201, 0.5900526, 5.215936, 0.15499783, 25.119644, 0.070990615, 27.285177, 0.80270976, 28.585064, 2.2462626, 29.59843, 3.8379426, 30.39427, 5.2863646, 31.298876, 6.7396564, 32.64381, 8.722564, 46.663757, 8.984733, 48.196594, 7.9563494, 49.150707, 6.512798, 49.971306, 5.1682696, 50.549614, 3.4625475, 52.008186, 1.5985508, 53.709034, 0.046235085, 148.099, 0.04622841, 148.91472, 0.48128223, 150.11111, 1.6232996, 151.30753, 2.9828444, 152.06886, 4.288007, 152.77582, 5.430025, 153.04773, 47.354256, 152.34077, 48.876945, 151.57942, 49.529526, 150.43741, 50.562782, 149.73044, 50.834686, 44.595486, 51.81356, 43.29032, 52.46614, 42.692123, 53.825684, 42.148308, 54.967705, 41.223816, 56.762306, 40.299324, 58.013084, 38.8854, 59.970177, 18.604671, 60.133102, 17.6258, 59.154232, 16.4294, 57.52278, 15.015471, 55.51065, 14.526036, 53.8792, 13.384019, 52.6828, 5.0636063, 52.410892, 4.1243095, 52.084602, 3.1454391, 51.37764, 1.7315102, 50.344383, 0.8070221, 49.36551, -0.17185211, 48.44102)

[connection signal="focus_entered" from="Action_Button" to="Action_Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Action_Button" to="Action_Button" method="_on_focus_exited"]
[connection signal="pressed" from="Action_Button" to="Action_Button" method="_on_pressed"]
